# rag-pdf-local-demo

./: README.md  SHARING NOTES.md  chat.py  pyproject.toml
old/: streamlit_app.py
pages/: add_data.py
